istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-inject: "true"
  name: demo
